--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -142,7 +142,9 @@
 
 .ast-comment-meta {
     margin-bottom: 1.2em;
-    margin-top: 1.2em;
+    @media(max-width: $mx-col-sm) {
+        margin-top: 1.2em;
+    }
 }
 
 .ast-comment-time {
